# greenwasm

./: .gitmodules  .travis.yml  Cargo.toml  README.md
etc/: fuzz_loop.py
greenwasm-binary-format/: Cargo.toml  README.md
greenwasm-binary-format/src/: lib.rs  tests_binary_format.rs
greenwasm-execution/: Cargo.toml  README.md
greenwasm-execution/src/: dynamic_adapter.rs  instructions.rs  lib.rs  modules.rs  numerics.rs  runtime_structure.rs  structure_references.rs
greenwasm-generic-interpreter/: Cargo.toml
greenwasm-generic-interpreter/src/: generic_interface.rs  greenwasm_engine.rs  greenwasm_poc_engine.rs  greenwasm_test_engine.rs  lib.rs  sketch1.rs
greenwasm-spectest/: Cargo.toml  README.md
greenwasm-spectest/src/: lib.rs
greenwasm-spectest/testsuite/: globals.wast  linking.wast
greenwasm-structure/: Cargo.toml  README.md
greenwasm-structure/src/: instructions.rs  lib.rs  modules.rs  types.rs
greenwasm-structure/src/types/: conventions.rs
greenwasm-utils/: Cargo.toml
greenwasm-utils/src/: lib.rs
greenwasm-validation/: Cargo.toml  README.md
greenwasm-validation/src/: lib.rs
src/: decoding.rs  execution.rs  lib.rs  structure.rs  validation.rs
src/decoding/: ast_builder.rs  binary_format.rs  tests_binary_format.rs  tests_text_format.rs  text_format.rs
src/structure/: instructions.rs  modules.rs  types.rs
src/structure/types/: conventions.rs
tests/: binary_format.rs  function_space.wasm  function_space.wat  fuzz0.wasm  spec_testsuite.rs  wasm_files.rs
tests/wasm_files/: parser_abort.wasm  pong.wasm  stuff.wasm
