cargo-features = ["edition", "rename-dependency"]

[workspace]

[package]
edition = '2018'
name = "greenwasm"
version = "0.2.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/greenwasm"
description = "An implementation of the Webassembly spec in Rust."
readme = "README.md"

[dependencies]
structure = { version = "0.2.0", package = "greenwasm-structure", path = "greenwasm-structure" }
validation = { version = "0.2.0", package = "greenwasm-validation", path = "greenwasm-validation" }
binary_format = { version = "0.2.0", package = "greenwasm-binary-format", path = "greenwasm-binary-format" }
execution = { version = "0.2.0", package = "greenwasm-execution", path = "greenwasm-execution" }
binaryen = "0.4.0"

[dev-dependencies]
spectest = { version = "0.2.0", package = "greenwasm-spectest", path = "greenwasm-spectest" }

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
