[workspace]

[package]
name = "greenwasm"
version = "0.3.1"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/greenwasm"
description = "An implementation of the Webassembly spec in Rust."
readme = "README.md"
repository = "https://github.com/Kimundi/greenwasm"
categories = ["wasm"]
keywords = []

[dependencies.greenwasm-structure]
version = "0.3.0"
path = "greenwasm-structure"

[dependencies.greenwasm-validation]
version = "0.3.0"
path = "greenwasm-validation"

[dependencies.greenwasm-binary-format]
version = "0.3.0"
path = "greenwasm-binary-format"

[dependencies.greenwasm-execution]
version = "0.3.0"
path = "greenwasm-execution"

[dependencies.binaryen]
version = "0.4.0"

[dev-dependencies.greenwasm-spectest]
version = "0.3.1"
path = "greenwasm-spectest"

[profile.dev]
opt-level = 1 # The parser is horribly slow otherwise

[badges]
appveyor = { repository = "Kimundi/greenwasm" }
travis-ci = { repository = "Kimundi/greenwasm" }

is-it-maintained-issue-resolution = { repository = "Kimundi/greenwasm" }
is-it-maintained-open-issues = { repository = "Kimundi/greenwasm" }

maintenance = { status = "experimental" }
