cargo-features = ["edition", "rename-dependency"]

[package]
edition = '2018'
name = "greenwasm-binary-format"
version = "0.1.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

readme = "README.md"

workspace = ".."

[dependencies]
structure = { package = "greenwasm-structure", path = "../greenwasm-structure" }
nom = { version = "4.0", features = ["verbose-errors"] }
