cargo-features = ["edition", "rename-dependency"]

[package]
edition = '2018'
name = "greenwasm-spectest"
version = "0.2.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/greenwasm-spectest"
description = "A library shim around a mirror of the official Webasembly MVP testsuite."
readme = "README.md"

workspace = ".."

[dependencies]
wabt = { version = "0.5.0" }
