[package]
name = "greenwasm-spectest"
version = "0.3.2"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/greenwasm-spectest"
description = "A library shim around a mirror of the official Webasembly MVP testsuite."
readme = "README.md"
repository = "https://github.com/Kimundi/greenwasm"
categories = ["wasm", "development-tools"]
keywords = ["testsuite"]

workspace = ".."

[dependencies]
wabt = "0.5.0"

[badges]
appveyor = { repository = "Kimundi/greenwasm" }
travis-ci = { repository = "Kimundi/greenwasm" }

is-it-maintained-issue-resolution = { repository = "Kimundi/greenwasm" }
is-it-maintained-open-issues = { repository = "Kimundi/greenwasm" }

maintenance = { status = "experimental" }
