cargo-features = ["edition", "rename-dependency"]

[package]
edition = '2018'
name = "greenwasm-structure"
version = "0.2.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

readme = "README.md"

workspace = ".."

[dependencies]
smallvec = { version = "0.6.4", features = ["union"] }
