cargo-features = ["edition", "rename-dependency"]

[package]
edition = '2018'
name = "greenwasm-validation"
version = "0.2.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/greenwasm-validation"
description = "."
readme = "README.md"

workspace = ".."

[dependencies]
structure = { version = "0.2.0", package = "greenwasm-structure", path = "../greenwasm-structure" }
